kubernetes/simple_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test
spec:
  containers:
  - name: test-container
    image: nginx
    ports:
    - containerPort: 80
